# Record-Image-IMU

./: CMakeLists.txt  README.md  build.sh  main.cpp  run2.sh
IMUrecorder/include/: autopilot_interface.h  mavlink_control.h
IMUrecorder/src/: autopilot_interface.cpp  mavlink_control.cpp
OutputFiles/2018-06-20:15:38:17/: IMU.csv  IMU.txt  video_timestamp.txt
VideoRecorder/include/: VideoRecorder.h
VideoRecorder/src/: VideoRecorder.cpp
